[metadata]
name = pe
description = Library for Parsing Expression Grammars (PEG)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = peg, parsing, text
author = Michael Wayne Goodman
author_email = goodman.m.w@gmail.com
url = https://github.com/goodmami/pe/

classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Cython
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Text Processing
  Topic :: Utilities

project_urls =
  Documentation = https://github.com/goodmami/pe/blob/main/docs/README.md
  Changelog = https://github.com/goodmami/pe/blob/main/CHANGELOG.md


[options]
python_requires = >= 3.8
zip_safe = False
packages = pe
test_suite = test
setup_requires =
    setuptools >=46.4.0
    Cython ~= 0.29
tests_require =
    pytest


[flake8]
max-line-length = 88
exclude =  .git, __pycache__, test/, build/, dist/